--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">RailLearn</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <string name="show_trips">Show trips</string>
+    <string name="join">Join</string>
+
+    <string name="stops">Stops:</string>
+    <string name="Description">Description:</string>
 </resources>
