--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="show_trips">Show trips</string>
     <string name="join">Join</string>
+    <string name="next">Next</string>
 
     <string name="stops">Stops:</string>
     <string name="Description">Description:</string>
@@ -13,4 +14,5 @@
     <string name="hint_station">Station name</string>
     <string name="hint_date">Date</string>
     <string name="hint_time">Time</string>
+
 </resources>
