--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="show_trips">Show trips</string>
     <string name="join">Join</string>
     <string name="next">Next</string>
+    <string name="create">Create</string>
 
     <string name="stops">Stops:</string>
     <string name="Description">Description:</string>
