--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
 
     <string name="stops">Stops:</string>
     <string name="Description">Description:</string>
-    <string name="service_endpoint">https://rail-learn.herokuapp.com</string>
 
     <string name="hint_station">Station name</string>
     <string name="hint_date">Date</string>
@@ -18,4 +17,8 @@
     <string name="hint_description">Description</string>
     <string name="hint_title">Title</string>
 
+    <string name="service_endpoint">https://rail-learn.herokuapp.com</string>
+
+    <string name="create_action">create</string>
+    <string name="join_action">join</string>
 </resources>
