--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">RailLearn</string>
 
+    <string name="facebook_app_id">1687507658168734</string>
+
     <string name="action_settings">Settings</string>
 
     <string name="show_trips">Show trips</string>
