Show my trips in edit type.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="join">Join</string>
     <string name="next">Next</string>
     <string name="create">Create</string>
+    <string name="edit">Edit</string>
 
     <string name="stops">Stops:</string>
     <string name="Description">Description:</string>
