Add updated full trip activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
 
     <string name="create_action">create</string>
     <string name="join_action">join</string>
+    <string name="update">Update</string>
 </resources>
