--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="next">Next</string>
     <string name="create">Create</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 
     <string name="stops">Stops:</string>
     <string name="Description">Description:</string>
