--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="my_offers_menu_items">My Offers</string>
     <string name="my_requests_menu_item">My Requests</string>
     <string name="other_offers_menu_item">Other Offers</string>
+    <string name="trips">Trips</string>
 </resources>
